Added error handling for HTTP Service Interface Clients